--- a/admin/view/default/mproduct/addfrom.html
+++ b/admin/view/default/mproduct/addfrom.html
@@ -3,17 +3,17 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：非自动化产品 --> {{if $edit}}修改产品{{else}}增加产品{{/if}}</div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<form name='nodeform' action="?c=mproduct&a=addMproduct&id={{$mproduct.id}}" method="post">
 			<tr>
 				<td colspan="2" class="bg_main">{{if $edit}}修改产品{{else}}增加产品{{/if}}</td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td class="wid_general">产品名称：</td>
 				<td><input name='name' type='text' id='tb_wid3' value="{{$mproduct.name}}" size="16">
 				</td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>业务类型：</td>
 				<td>
 					<select name='group_id'>
@@ -24,13 +24,13 @@
 					&nbsp;<a href="?c=mproductgroup&a=addMproductgroupFrom">增加业务</a>
 				</td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>产品组：</td>
 				<td>
 					<input name='upid' type='text' value="{{intval($mproduct.upid)}}" size="3">(可升级到相同产品组的其它产品，设置为0不可升级)
 				</td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>价格(元/年)</td>
 				<td>
 				<input name="price" type="text" id='tb_wid3' value="{{$mproduct.price/100}}">
@@ -38,7 +38,7 @@
 				</td>
 			</tr>
 			{{if count($agent_ids)>0}}
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>代理价格(元/年)</td>
 				<td>
 				{{for $i=0;$i< count($agent_ids);$i++}}
@@ -48,18 +48,18 @@
 				</td>
 			</tr>
 			{{/if}}
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>产品详情(支持html):</td>
 				<td><textarea name='describe' rows='25' cols='70'>{{$mproduct.describe}}</textarea></td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>状态</td>
 				<td>
 					<input type="checkbox" name="pause_flag" value="1" {{if $mproduct.pause_flag!=0}}checked{{/if}}>暂停销售
 					<input type="checkbox" name="month_flag" value="1" {{if $mproduct.month_flag!=0}}checked{{/if}}>月付
 				</td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>&nbsp;</td><td ><input type="submit" value="确认提交"></td>
 			</tr>
 			</form>
