--- a/admin/view/default/news/list.html
+++ b/admin/view/default/news/list.html
@@ -2,23 +2,23 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：信息管理 --> 公告管理 --> 更新公告 </div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
  			<form name='nodeform' action="?c=news&a=updateNews&id={{$new.id}}" method="post">
 			<tr>
 				<td colspan="2" class="bg_main hg_main"><b>更新公告</b></td>
 			</tr>
-		  	<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+		  	<tr>
 				<td class="wid_general">标题:</td> 
 				<td>
 					<input name='title' type="text" value="{{$new.title}}" size="45" />
 				</td>
 		   </tr>
-		   <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+		   <tr>
 				<td valign="top">公告内容:</td>
 				<td>
 					<textarea name='body'  rows='20' cols='60'>{{$new.body}}</textarea>
 				</td>
-		 	<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+		 	<tr>
 				<td>&nbsp;</td><td><input type="submit" value="提交"></td>
 		  	</tr>
 			</form>
