--- a/admin/view/default/question/list.html
+++ b/admin/view/default/question/list.html
@@ -2,25 +2,25 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：信息管理 --> 用户提问 --> 提问用户:{{$log.username}} </div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 		 <form name='nodeform' action="?c=question&a=addReply&id={{$log.id}}" method="post">
 			<tr>
 				<td colspan="2" class="bg_main"><b>提问用户:{{$log.username}}</b></td>
 			</tr>
-		  	<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+		  	<tr>
 				<td class="wid_general">提问用户:{{$log.username}}</td> 
 				<td>{{$log.title}}</td>
 			</tr>
-		   <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+		   <tr>
 				<td>提问内容:</td>
 				<td>{{$log.body}}</td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>管理员回复:</td>
 				<td>
 				<textarea name='reply'  rows='6' cols='35'>{{$log.reply}}</textarea></td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>&nbsp;</td><td colspan="2"><input type="submit" value="提交"></td>
 			</tr>
 			</form>
