--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -72,7 +72,7 @@ function updateViewResult()
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：虚拟主机/cdn --> 产品列表</div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 			  <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
 				<tr>
 					<td colspan="12" class="bg_main hg_main">
@@ -86,7 +86,7 @@ function updateViewResult()
 					</td>
 				 </tr>
 				 </form>
-				<tr class="bg_yellow">
+				<tr id="bg_yellow">
 					<td>操作</td>
 					<td>显示顺序</td>
 					<td>产品ID</td>
@@ -101,7 +101,7 @@ function updateViewResult()
 					<td>状态</td>    
 				</tr>
 				{{foreach from=$list item=row}}
-				<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+				<tr>
 					<td>
 						[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=vhostproduct&a=del&id={{$row.id}}';}" title="删除">删除</a>]
 						[<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}">更改</a>]
@@ -110,18 +110,17 @@ function updateViewResult()
 						<input type='checkbox' id='view{{$row.id}}' onClick="updateView(this.id,{{$row.id}})" name='view' value='{{$row.view}}' {{if $row.view}}checked{{/if}}>
 				  {{$row.view}}
 					</td>
-	
-				<td>{{$row.id}}</td>
-				<td>{{$row.name}}</td>
-				<td>
-					<select id='node{{$row.id}}' name='node' onChange="changeNode('{{$row.id}}','{{$row.templete}}')">
-					{{foreach from=$nodes item=node}}
-					<option value='{{$node.name}}' {{if $row.node==$node.name}}selected{{/if}} title='{{$node.nickname}}'>
-					{{$node.name}}
-					</option>
-					{{/foreach}}
-					</select>
-					<div id='busy{{$row.id}}'></div>
+					<td>{{$row.id}}</td>
+					<td>{{$row.name}}</td>
+					<td>
+						<select id='node{{$row.id}}' name='node' onChange="changeNode('{{$row.id}}','{{$row.templete}}')">
+						{{foreach from=$nodes item=node}}
+						<option value='{{$node.name}}' {{if $row.node==$node.name}}selected{{/if}} title='{{$node.nickname}}'>
+						{{$node.name}}
+						</option>
+						{{/foreach}}
+						</select>
+						<div id='busy{{$row.id}}'></div>
 				</td>
 				<td>{{if $row.cdn}}cdn{{else}}{{$row.web_quota}}{{/if}}</td>
 				<td>{{if $row.cdn}}-{{else}}{{$row.db_quota}}{{/if}}</td>
@@ -139,7 +138,7 @@ function updateViewResult()
 			</tr>
 			{{/foreach}}
 			<tr>
-				<td colspan="12" class="bg_yellow" align="right">共计 {{$sum}} 条记录&nbsp;	</td>
+				<td colspan="12" id="bg_yellow" align="right">共计 {{$sum}} 条记录&nbsp;	</td>
 			</tr>
     	</table>
   </div>
