--- a/admin/view/default/agent/addFrom.html
+++ b/admin/view/default/agent/addFrom.html
@@ -2,26 +2,26 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：系统设置 --> 增加代理级别 </div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
-		  <form  name='reg' action="?c=agent&a=addAgent&id={{$agent[0].id}}" method='post'>
+		<table class="table_main2" cellpadding="0" cellspacing="1">
+		  <form  name='reg' action='?c=agent&a=addAgent&id={{$agent[0].id}}' method='post'>
 			<tr>
 				<td colspan="2" class="bg_main"><b>增加代理级别</b></td>
 			</tr>
 			{{if $edit}}
-		  <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
-			<td>代理ID:</td> 
-			<td>{{$agent[0].id}}</td>
-		   </tr>
+		   <tr>
+				<td>代理ID:</td> 
+				<td>{{$agent[0].id}}</td>
+		    </tr>
 		   {{/if}}
-		   <tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+		   <tr>
 				<td class="wid_general" valign="top">代理名称:</td>
 				<td><input name="name" type="text" size="25" value="{{$agent[0].name}}" /></td>
 			</tr>
-		  	<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+		  	<tr>
 				<td>&nbsp;</td><td><input type="submit" value="确认" />
 			</td>
 		  </tr>
+		  </form>
     </table>
 	</div>
-	</form>
 </div>
