--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -1,5 +1,13 @@
 ﻿{{include file='common/head.html'}}
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
+<style type=text/css>
+tr {
+	background-color: #f5f5f5;
+}
+tr:hover {
+	background-color: #E3FFC9;
+}
+</style>
 <script language="javascript">
 function checkPassword()
 {
@@ -18,20 +26,20 @@ function checkPassword()
     <form name='frm' action="?c=session&a=changePassword" method="post">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：帐号管理 --> 修改密码</div>
-		<table class="table_main mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main" cellpadding="0" cellspacing="1">
 			<tr>
 				<td colspan="2" class="bg_main"><b>修改密码</b></td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td class="wid_general">原密码：</td><td><input type='password' name='oldpasswd' id='tb_wid3'></td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>新密码：</td><td><input type='password' name='passwd' id='tb_wid3' ></td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>确认新密码：</td><td><input type='password' name='passwd2' id='tb_wid3'></td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>&nbsp;</td><td><input type="submit" value="确定"></td>
 			</tr>
 		</table>
