--- a/admin/view/default/money/pagemoneyout.html
+++ b/admin/view/default/money/pagemoneyout.html
@@ -3,11 +3,11 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：财务管理 --> 消费记录</div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<tr>
 				<td colspan="6" class="bg_main"><b>消费记录</b></td>
 			</tr>
-			<tr class="bg_yellow">
+			<tr id="bg_yellow">
 				<td>序号</td>
 				<td>会员账号</td>
 				<td>消费金额</td>
@@ -15,7 +15,7 @@
 				<td>说明</td>	
 			</tr>
 				{{foreach from=$list item=row}}
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>{{$row.id}}</td>
 				<td>{{$row.username}}</td>
 				<td>{{$row.money/100}}元</td>
@@ -24,7 +24,7 @@
 			</tr>
 				{{/foreach}}
 			<tr>
-				<td colspan="6" class="bg_yellow" align="right">
+				<td colspan="6" id="bg_yellow" align="right">
 					{{if $page>1}}
 					<a href='?c=money&a=pageMoneyout&page=0'>首页</a> 
 					<a href='?c=money&a=pageMoneyout&page={{$page-1}}'>上一页</a> 
