--- a/admin/view/default/mproductgroup/pagelistmproductgroup.html
+++ b/admin/view/default/mproductgroup/pagelistmproductgroup.html
@@ -3,18 +3,18 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：非自动化产品 --> 业务列表</div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<tr>
 				<td colspan="4" class="bg_main"><a href="?c=mproductgroup&a=addMproductgroupFrom" target='main'><b>[增加业务]</b></a></td>
 			</tr>
-			<tr class="bg_yellow">
+			<tr id="bg_yellow">
 				<td>操作</td>	
 				<td><a href='?c=mproductgroup&a=pageListMproductgroup&order=id'>业务ID</a></td>
 				<td><a href='?c=mproductgroup&a=pageListMproductgroup&order=name'>业务名称</a></td>
 				<td>业务详情</td>
 			</tr>
 			{{foreach from=$list item=row}}
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>
 					[<a href="javascript:if(confirm('确定?')){location='?c=mproductgroup&a=delMproductgroup&id={{$row.id}}';}" >删除</a>]
 					[<a href="?c=mproductgroup&a=addMproductgroupFrom&id={{$row.id}}" >更改</a>]
@@ -25,7 +25,7 @@
 			</tr>
 			{{/foreach}}
 			<tr>
-				<td colspan="4" class="bg_yellow" align="right">
+				<td colspan="4" id="bg_yellow" align="right">
 					{{if $page>1}}
 					<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&&page=0'>首页</a> 
 					<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page-1}}'>上一页</a> 
