--- a/admin/view/default/news/pagelist.html
+++ b/admin/view/default/news/pagelist.html
@@ -3,18 +3,18 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：信息管理 --> 公告管理 </div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<tr>
 				<td colspan="4" class="bg_main hg_main"><b><a href="?c=news&a=addFrom" target="{{$target}}" >[增加公告]</a></b></td>
 			</tr>
-			<tr class="bg_yellow">
+			<tr id="bg_yellow">
 				<td>操作</td>		
 				<td>序号</td>
 				<td>标题</td>
 				<td>更新时间</td>
 			</tr>
 				{{foreach from=$list item=row}}
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>[<a href='?c=news&a=getNews&id={{$row.id}}'>更新</a>][<a href='javascript:if(confirm("确定要删除吗?"))
 				{ window.location="?c=news&a=delNews&id={{$row.id}}";}'>删除</a>]</td>
 				<td>{{$row.id}}</td>
@@ -23,7 +23,7 @@
 			</tr>
 				{{/foreach}}
 			<tr>
-				<td colspan="4" class="bg_yellow" align="right">
+				<td colspan="4" id="bg_yellow" align="right">
 					{{if $page>1}}
 					<a href='?c=news&a=pagenews&page=0'>首页</a> 
 					<a href='?c=news&a=pagenews&page={{$page-1}}'>上一页</a> 
