--- a/admin/view/default/question/pagelist.html
+++ b/admin/view/default/question/pagelist.html
@@ -3,7 +3,7 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：信息管理 --> 用户提问</div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<form action='?c=question&a=pageQuestion' method='post'>
 			<tr>
 				<td colspan="8" class="bg_main hg_main">
@@ -15,7 +15,7 @@
 				</td>
 			</tr>
 			</form>
-			<tr class="bg_yellow">
+			<tr id="bg_yellow">
 				<td>操作</td>		
 				<td>序号</td>
 				<td>用户名</td>
@@ -26,7 +26,7 @@
 				<td>状态</td>
 			</tr>
 				{{foreach from=$list item=row}}
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>[<a href='?c=question&a=getQuestion&id={{$row.id}}'>回复</a>]</td>
 				<td>{{$row.id}}</td>
 				<td><a href='?c=user&a=listuser&username={{$row.username}}'>{{$row.username}}</a></td>
@@ -38,7 +38,7 @@
 			</tr>
 				{{/foreach}}
 			<tr>
-				<td colspan="8" class="bg_yellow" align="right">
+				<td colspan="8" id="bg_yellow" align="right">
 					{{if $page>1}}
 					<a href='?c=question&a=pageQuestion&sortname={{$smarty.request.sortname}}&page=0'>首页</a> 
 					<a href='?c=question&a=pageQuestion&sortname={{$smarty.request.sortname}}&page={{$page-1}}'>上一页</a> 
