--- a/admin/view/default/vhostproduct/listVhost.html
+++ b/admin/view/default/vhostproduct/listVhost.html
@@ -3,10 +3,10 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：虚拟主机/cdn --> 站点列表</div>
-		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<form name="form1" method="post" action="?c=vhost&a=showVhost">
 			<tr>
-				<td colspan="11" class="bg_yellow hg_main">
+				<td colspan="11" id="bg_yellow" class="hg_main">
 					<span class="topimg STYLE1">输入用户名或#uid:</span>
 					<input name="user" type="text" id="user" value="{{$user}}" size="25">
 					<input type="submit" name="Submit" value="搜索">
@@ -16,7 +16,7 @@
 			<tr>
 				<td colspan="11" class="bg_main"><b>站点列表</b></td>
 			</tr>
-			<tr class="bg_yellow">
+			<tr id="bg_yellow">
 				<td>操作</td>
 				<td>用户名</td>
 				<td>产品名称</td>
@@ -31,7 +31,7 @@
 			</tr>
 				{{foreach from=$list item=row}}
 			<form action='?c=vhost&a=setStatus&name={{$row.name}}' method='post' name='status_{{$row.uid}}form'>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>
 					[<a href='javascript:if(confirm("真的要删除空间吗,此操作将导致数据无法恢复,如果你只是想关闭空间，可以把该空间的状态改为暂停"))
 					{ window.location="?c=vhost&a=del&name={{$row.name}}";}'>删除</a>]
@@ -59,7 +59,7 @@
 			</form>
 			{{/foreach}}
 		<tr>
-			<td colspan="11" class="bg_yellow" align="right">
+			<td colspan="11" id="bg_yellow" align="right">
 				{{if $page>1}}
 				<a href='?c=vhost&a=pageVhost&page=0'>首页</a> 
 				<a href='?c=vhost&a=pageVhost&page={{$page-1}}'>上一页</a> 
