--- a/admin/view/default/main.html
+++ b/admin/view/default/main.html
@@ -3,17 +3,17 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：帐号管理 --> 我的信息</div>
-		<table class="table_main mar_main" cellpadding="0" cellspacing="1">
-		  <tr class="main_bgcolor">
+		<table class="table_main" cellpadding="0" cellspacing="1">
+		  <tr>
 			<td colspan="2" class="bg_main"><b>我的信息</b></td>
 		  </tr>
-		  <tr class="main_bgcolor">
+		  <tr>
 			<td class="wid_general">用户名:</td><td>{{$role.admin}}</td>
 		  </tr>
-		  <tr class="main_bgcolor">
+		  <tr>
 			<td>最后登录时间:</td><td class="td_bgc right_2">{{$smarty.session.admin_last_login}}</td>
 		  </tr>
-		  <tr class="main_bgcolor">
+		  <tr>
 			<td>最后登录IP:</td><td>{{$smarty.session.admin_last_ip}}</td>
 		  </tr>
 		</table>
