--- a/admin/view/default/main.html
+++ b/admin/view/default/main.html
@@ -11,7 +11,7 @@
 			<td class="wid_general">用户名:</td><td>{{$role.admin}}</td>
 		  </tr>
 		  <tr>
-			<td>最后登录时间:</td><td class="td_bgc right_2">{{$smarty.session.admin_last_login}}</td>
+			<td>最后登录时间:</td><td>{{$smarty.session.admin_last_login}}</td>
 		  </tr>
 		  <tr>
 			<td>最后登录IP:</td><td>{{$smarty.session.admin_last_ip}}</td>
