--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -4,18 +4,18 @@
 	<form  action="?c=adminuser&a=insert" method='post'>
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：帐号管理 --> 增加管理员</div>
-		<table class="table_main mar_main" cellpadding="0" cellspacing="1">
+		<table class="table_main" cellpadding="0" cellspacing="1">
 		  	<tr><td colspan="2" class="bg_main"><b>增加管理员</b></td></tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td class="wid_general">用户：</td><td><input type='text' name='username' id='tb_wid3' value="" /></td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>密码：</td><td><input type='password' name='passwd' id='tb_wid3' value=""/></td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>确认密码：</td><td><input type='password' name='passwd2' id='tb_wid3' value=""/></td>
 			</tr>
-			<tr class="main_bgcolor" onMouseMove="tr_onMouseOver(this)" onMouseOut="tr_onMouseOut(this)">
+			<tr>
 				<td>&nbsp;</td><td align="left"><input type="submit" value="确定"></td>
 			</tr>
 		</table>
