--- a/admin/view/default/agent/listagent.html
+++ b/admin/view/default/agent/listagent.html
@@ -8,7 +8,7 @@
 				<td colspan="3" class="bg_main"><a href="?c=agent&a=addAgentFrom"><b>[增加代理级别]</b></a></td>
 			</tr>
 			<tr id="bg_yellow">
-				<td>操作</td>
+				<td class="wid_general">操作</td>
 				<td>代理id号</td>
 				<td>代理名称</td>
 			</tr>
